# slack-mcp-host

./: .env.example  .gitignore  LICENSE  README.md  manifest.yml  pyproject.toml  wrangler.toml
src/: api.py  config.py  llm_manager.py  mcp_manager.py  slack_app.py
